Fixed date in footer; updated address and phone to be obfuscated

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                       class="elementor-element elementor-element-bdc20aa elementor-widget__width-auto elementor-hidden-phone elementor-widget elementor-widget-heading"
                       data-id="bdc20aa" data-element_type="widget" data-widget_type="heading.default">
                       <div class="elementor-widget-container">
-                        <h6 class="elementor-heading-title elementor-size-default">706-383-7065</h6>
+                        <h6 class="elementor-heading-title elementor-size-default" id="header-phone">555-555-5555</h6>
                       </div>
                     </div>
                   </div>
@@ -1432,18 +1432,18 @@
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="icon icon-map-marker1"></i>
                             </span>
-                            <span class="elementor-icon-list-text">427 N. Belair Road, Ste. F, Evans GA 30809</span>
+                            <span class="elementor-icon-list-text">5047 Parham Rd., Unit 2,<br>Grovetown, GA 30813</span>
                           </li>
                           <li class="elementor-icon-list-item">
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="icon icon-envelope11"></i>
                             </span>
-                            <a class="footer-link" href="mailto:debbierjohnson.lpc@gmail.com"><span class="elementor-icon-list-text">debbierjohnson.lpc@gmail.com</span></a></span>
+                            <a class="footer-link" id="email" href="mailto:infomation@example.com"><span class="elementor-icon-list-text">infomation@example.com</span></a>
                           </li>
                           <li class="elementor-icon-list-item">
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="icon icon-phone1"></i> </span>
-                            <span class="elementor-icon-list-text">706-383-7065</span>
+                            <span class="elementor-icon-list-text" id="phone">555-555-5555<span>
                           </li>
                         </ul>
                       </div>
@@ -1484,7 +1484,7 @@
                       data-id="75893274" data-element_type="widget" data-widget_type="text-editor.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-text-editor elementor-clearfix">
-                          <p>Copyright &copy; 2021 DRJCounseling.com</p>
+                          <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> DRJCounseling.com</p>
                         </div>
                       </div>
                     </div>
@@ -1497,6 +1497,7 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="./scripts/app.js"></script>
   <script type="text/javascript" src="./scripts/scripts.js" id="contact-form-7-js"></script>
   <script type="text/javascript" src="./scripts/frontend-script.js" id="elementskit-framework-js-frontend-js"></script>
   <script type="text/javascript" src="./scripts/widget-scripts.js" id="ekit-widget-scripts-js"></script>
