--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                          <a href="#section-5-contact" target="_blank" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+                          <a href="#section-5-contact" class="elementor-button-link elementor-button elementor-size-sm" role="button">
                             <span class="elementor-button-content-wrapper">
                               <span class="elementor-button-text">Call or Email to Schedule a Consultation</span>
                             </span>
